# network-rgb-matrix-display

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/: CONTRIBUTING.md
client/: CMakeLists.txt  mkbuild.sh
client/cmake.files/: FindBoost.cmake  FindSDL2.cmake
client/examples/: direct-draw-on-buffer.cpp  direct-draw-on-buffer.ini  draw-bitmap.cpp  draw-bitmap.ini  draw-mp4.cpp  draw-with-sdl2.cpp  draw-with-sdl2.ini  simple.cpp  simple.ini
client/src/: NetworkDisplay.cpp  NetworkDisplay.h  NetworkDisplayConfig.h  SDL2Display.h  SegmentClient.cpp  SegmentClient.h
md/: Client_setup_guide.md  DEVELOPING.md  Display_setup_guide.md  How_it_works.md  Server_setup_guide.md
sdl2-server-dummy/: CMakeLists.txt  FindBoost.cmake  main.cpp  mkbuild.sh
server/: CMakeLists.txt  example.ini  get_pi_model.sh  kill-matrix-server.sh  make-and-run.sh  mkbuild.sh  pidisplay.service  rgb-server.ini  start-matrix-server.sh
server-dummy/: main.cpp  mkbuild.sh
server/src/: MatrixSegment.cpp  MatrixSegment.h  MatrixStrip.cpp  MatrixStrip.h  NetworkServer.cpp  NetworkServer.h  NetworkServerConfig.h  main.cpp
