cmake_minimum_required(VERSION 3.13)
project(svr-dummy)

set(CMAKE_CXX_STANDARD 14)

# external libraries
INCLUDE(FindPkgConfig)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)

INCLUDE_DIRECTORIES(
        ${Boost_INCLUDE_DIR}
        ${SDL2_INCLUDE_DIRS}
        ${SDL2IMAGE_INCLUDE_DIRS}
)
#PKG_SEARCH_MODULE(BOOST REQUIRED libboost)



add_executable(${PROJECT_NAME} main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT}   -L/usr/local/lib ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES}  ${Boost_LIBRARIES})


